// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`google integration > formatUserList 1`] = `
Set {
  "chrisns",
  "foo",
  "tar",
  "bar",
}
`;

exports[`google integration > formatUserList bad 1`] = `
Set {
  "chrisns",
  "userspace",
}
`;

exports[`google integration > getGithubUsersFromGoogle 1`] = `
Set {
  "chrisns",
  "foo",
  "tar",
  "bar",
}
`;

exports[`google integration > googleAuth 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "email": "foo",
        "key": "bar",
        "scopes": [
          "https://www.googleapis.com/auth/admin.directory.user.readonly",
        ],
        "subject": "hello@example.com",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Mock {
        "authorize": [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "authorizeAsync": [MockFunction],
        "constructor": [MockFunction],
        "createGToken": [MockFunction],
        "createScoped": [MockFunction],
        "fetchIdToken": [MockFunction],
        "fromAPIKey": [MockFunction],
        "fromJSON": [MockFunction],
        "fromStream": [MockFunction],
        "fromStreamAsync": [MockFunction],
        "getCredentials": [MockFunction],
        "getRequestMetadataAsync": [MockFunction],
        "hasAnyScopes": [MockFunction],
        "hasUserScopes": [MockFunction],
        "refreshTokenNoCache": [MockFunction],
      },
    },
  ],
}
`;
